# clion_homework_cpp

./: 18_4_sort_by_choice.cpp  18_5_bubble_sort.cpp  CMakeLists.txt  main.cpp
HW_18/: 18_6_task_1.cpp  18_6_task_2.cpp  18_6_task_3.cpp  18_6_task_3_v2.cpp  18_6_task_4.cpp  18_6_task_4_v2.cpp
