cmake_minimum_required(VERSION 3.17)
project(clion_homework_cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(clion_homework_cpp_1 main.cpp )
add_executable(clion_homework_cpp_2 18_4_sort_by_choice.cpp)
add_executable(clion_homework_cpp_3 18_5_bubble_sort.cpp)
add_executable(clion_homework_cpp_4 HW_18/18_6_task_1.cpp)
add_executable(clion_homework_cpp_5 HW_18/18_6_task_2.cpp)
add_executable(clion_homework_cpp_6 HW_18/18_6_task_3.cpp)
add_executable(clion_homework_cpp_7 HW_18/18_6_task_4.cpp)
